--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     </canvas>
     <script src="vector2.js"></script>
     <script src="howler.js"></script>
+    <script src="bullet.js"></script>
     <script src="keyboard.js"></script>
     <script src="level1.js"></script>
+    <script src="level2.js"></script>
     <script src="sprite.js"></script>
     <script src="player.js"></script>
     <script src="enemy.js"></script>
